--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -138,10 +138,10 @@
             <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
             {% csrf_token %}
             {% if choose_access_type %}
-                <div class="g8GroupInput two">
-                    <span>Tipo de Asistencia</span>
+                <div class="g8GroupChecbox g8GroupInput two" style="">
+                    <span>Tipo de Asistencia: </span>
                     <div class="g8Checkbox">
-                        <input id="pres" type="radio" checked class="validate[required]" name="access_type" value="in_person">
+                        <input id="pres" type="radio" checked="" class="validate[required]" name="access_type" value="in_person">
                         <label for="pres">
                             Presencial
                         </label>
