Send email when schedule

--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -27,7 +27,7 @@
 <div class="coockies" id="elCoockie">
     <div class="grilla">
         <div class="gParrafo">
-            <p>Utilizamos cookies para proporcionarte una mejor experiencia.  Conoce nuestra <a target="_blank" href="{{company.cookies_policy.url}}">política de cookies</a></p>
+            <p>Este sitio web utiliza cookies necesarias para su funcionamiento. Antes de continuar navegando, te sugerimos revisar el tratamiento de estas en nuestra <a target="_blank" href="{{company.cookies_policy.url}}">Política de Cookies</a></p>
         </div>
         <a href="#" class="gButton " id="buttonCookie">Aceptar</a>
     </div>
