--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -134,10 +134,10 @@
                 <source src="video.mp4" type="video/mp4">
             </video> {% endcomment %}
         </div>
-        <a href="#" class="clickVideo popup " data-urlvideo="{{home_page.main_event_video_url}}">
+        {% comment %} <a href="#" class="clickVideo popup " data-urlvideo="{{home_page.main_event_video_url}}">
             <span style="color:{{home_page.text_buttons_color}};">Ver video</span>
             <div class="lineCircleAnimate" style="border:2px solid {{home_page.buttons_color}};"></div>
-        </a>
+        </a> {% endcomment %}
         {% endif %}
     </div>
 </section>
