--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -544,9 +544,8 @@
 {% endblock %}
 
 {% block jsfinal %}
+{% if not logged_user %}
 <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
-
-<script src="/static/web/js/swiper/swiper-bundle.min.js"></script>
 <script>
         grecaptcha.ready(function() {
             grecaptcha.execute('{{recaptcha_site_key}}', {action: "/"}).then(function(token) {
@@ -554,7 +553,9 @@
                 document.getElementById('g-recaptcha-response_login').value = token;
             });
         });
+        setInterval(function(){ grecaptcha.reset(); }, 2 * 60 * 1000 );
 </script>
+{% endif %}
 <script>
     function onClick(e) {
       e.preventDefault();
