Fix exhibitors url

--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -29,7 +29,7 @@
         <div class="gParrafo">
             <p>Este sitio web utiliza cookies necesarias para su funcionamiento. Antes de continuar navegando, te sugerimos revisar el tratamiento de estas en nuestra <a target="_blank" href="{{company.cookies_policy.url}}">Política de Cookies</a></p>
         </div>
-        <a href="#" class="gButton " id="buttonCookie">Aceptar</a>
+        <a href="#" class="gButton " id="buttonCookie">Cerrar</a>
     </div>
 </div>
 {% endif %}
