--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -771,7 +771,7 @@
                     elb4PopupCargo.innerText = getCargo;
                     elb4Popupimg.setAttribute('src',getImg);
                     elb4PopupText.innerHTML = getInfo;
-                    elb4linkedin.setAttribute("value",getUrl);
+                    elb4linkedin.setAttribute("href",getUrl);
                     elb4PopupBandera.setAttribute("src",getBander);
                 });
             }
