Show confirmation  message

--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -131,6 +131,13 @@
         </div>
         <h4><a href="#" class="return-register-form"><- Regresar</a></h4>
     </div>
+    <div class="g8Form waiting-confirmation-form" style="display:none;">
+        <div class="gParrafo message-waiting-confirmation">
+        </div>
+        <div class="g8Confirm fdc aifs">
+            <button class="g8SumitRegistro waiting-confirm-button">Continuar</button>
+        </div>
+    </div>
     <div class="gParrafo parrafo-register">
         <p>Completa el siguiente formulario para poder registrar tus datos.</p>
     </div>
