--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -141,11 +141,25 @@
                                 }, 3000)
                             }
                             if(data.success){
-                                $('.parrafo-register').show();
-                                $('.warning-form').hide();
-                                setTimeout(()=>{
-                                    window.location.href = data.redirect_url
-                                }, 2000)
+                                console.log(data, 'DATA')
+                                if(data.confirmed){
+                                    $('.parrafo-register').show();
+                                    $('.warning-form').hide();
+                                    setTimeout(()=>{
+                                        window.location.href = data.redirect_url
+                                    }, 2000)
+                                }else{
+                                    var parrafo_register = $('.parrafo-register')
+                                    parrafo_register.hide();
+                                    var register_form = $('.register-form')
+                                    register_form.hide();
+                                    $('.message-waiting-confirmation').html(data.confirmed_message)
+                                    $('.waiting-confirmation-form').show();
+                                    setTimeout(()=>{
+                                        window.location.href = data.redirect_url
+                                    }, 20000)
+                                }
+
                             }else{
                                 $('.save-register').removeClass('isLoading');
                                 var parrafo_register = $('.parrafo-register')
@@ -169,6 +183,9 @@
 
 
         })
+        $('.waiting-confirm-button').on('click', function (e) {
+            window.location.href = "/"
+        });
         $('.return-register-form').on('click', function (e) {
             $('.warning-form').hide();
             $('.parrafo-register').show();
@@ -181,9 +198,20 @@
                 type : "post",
                 data: register_data,
             }).done(function(data) {
-                setTimeout(()=>{
-                    window.location.href = data.redirect_url
-                }, 2000)
+                if(data.confirmed){
+                    setTimeout(()=>{
+                        window.location.href = data.redirect_url
+                    }, 2000)
+                }else{
+                    var parrafo_register = $('.warning-form')
+                    parrafo_register.hide();
+                    $('.message-waiting-confirmation').html(data.confirmed_message)
+                    $('.waiting-confirmation-form').show();
+                    setTimeout(()=>{
+                        window.location.href = data.redirect_url
+                    }, 20000)
+                }
+
             });
         });
         let elkeypress = document.getElementsByClassName('validKeypress')
