--- a/src/templates/landing/common/_footer.html
+++ b/src/templates/landing/common/_footer.html
@@ -1,10 +1,10 @@
 <footer>
-    <div class="grilla f aic jcsb">
+    <div class="grilla f aic jcsb anclaBlock" id="contact">
         <h3>{{footer.text}}</h3>
         {% if footer.mobile %}
             <a href="#" class="footerWsp f aic jcc">
                 <img src="/static/web/img/wsp.svg" alt="" width="60">
-                <h4>Whatsapp <span>{{footer.mobile}}</span></h4>
+                <h4>Contáctanos <span>{{footer.mobile}}</span></h4>
             </a>
         {% endif %}
         <div class="footerRedesContent">
