--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -125,7 +125,7 @@
 <!-- POPUP REGISTRO -->
 <div class="g8PopupForm formRegistro pr">
     <a href="#" class="g8ClosePopup icon-close pa closeRegistro"></a>
-    <h3>Crear cuenta</h3>
+    <h3>{{header_section.register_form_title}}</h3>
     <div class="g8Form warning-form" style="display:none;">
         <div class="gParrafo message-warning">
         </div>
@@ -142,7 +142,7 @@
         </div>
     </div>
     <div class="gParrafo parrafo-register">
-        <p>Completa el siguiente formulario para poder registrar tus datos.</p>
+        {{header_section.register_form_text}}
     </div>
     <div class="g8Form register-form">
         <form action="" method="POST" class="form-register">
